--- a/package.json
+++ b/package.json
@@ -2,9 +2,13 @@
   "name": "server",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "app.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "node app.js"
+  },
+  "engines": {
+    "node": "20.10.0",
+    "npm": "10.5.0"
   },
   "keywords": [],
   "author": "",
