--- a/package.json
+++ b/package.json
@@ -19,6 +19,8 @@
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
     "express-async-handler": "^1.2.0",
-    "mongoose": "^8.3.4"
+    "jsonwebtoken": "^9.0.2",
+    "mongoose": "^8.3.4",
+    "validator": "^13.12.0"
   }
 }
